--- a/pom.xml
+++ b/pom.xml
@@ -55,26 +55,47 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.0.15</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
 			<version>4.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-avro-serializer</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-schema-registry-client</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+<!--		old 7.6.1-->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.11.3</version>
+		</dependency>
+
 
 <!--		<dependency>-->
 <!--			<groupId>com.fasterxml.jackson.core</groupId>-->
 <!--			<artifactId>jackson-databind</artifactId>-->
 <!--			<version>2.17.2</version>-->
 <!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.confluent</groupId>-->
-<!--			<artifactId>kafka-avro-serializer</artifactId>-->
-<!--			<version>7.7.1</version>-->
-<!--		</dependency>-->
+
 <!--		<dependency>-->
 <!--			<groupId>io.confluent</groupId>-->
 <!--			<artifactId>kafka-schema-registry-client</artifactId>-->
 <!--			<version>7.7.1</version>-->
 <!--		</dependency>-->
+
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
