--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>avro</artifactId>
 			<version>1.11.3</version>
 		</dependency>
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-schema-registry-client</artifactId>
+			<version>7.7.1</version>
+		</dependency>
+		<!--		old 7.6.1-->
 
 		<dependency>
 			<groupId>io.confluent</groupId>
@@ -77,10 +83,9 @@
 		</dependency>
 		<dependency>
 			<groupId>io.confluent</groupId>
-			<artifactId>kafka-schema-registry-client</artifactId>
+			<artifactId>kafka-json-schema-serializer</artifactId>
 			<version>7.7.1</version>
 		</dependency>
-<!--		old 7.6.1-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
