added change commit offset for topic and partition feature, read message by topic and partition and offset feature

--- a/src/main/resources/application-example.yaml
+++ b/src/main/resources/application-example.yaml
@@ -4,3 +4,10 @@ spring:
 
 server:
   port: "Server Port"
+
+
+kafka:
+  bootstrap-server: "Kafka URL"
+
+schema-registry:
+  url: "Schema Registry URL"
