added more metric

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ server:
 
 kafka:
   bootstrap-server: localhost:9092 # địa chỉ và port của kafka broker
-  jolokia-server: http://localhost:8778/jolokia # địa chỉ này của jolokia agent expose trong kafka broker
+  jolokia-server: http://localhost:8778/jolokia # địa chỉ này của jolokia agent expose trong kafka broker.
 
 schema-registry:
   url: http://localhost:8081 # địa chỉ và port của schema registry
